<resources>
    <string name="app_name">KotlinLesson13</string>
    <string name="description">Enter a short description of the book</string>
    <string name="year">Enter year</string>
    <string name="author">Enter the author of the book</string>
    <string name="title">Enter the title of the book</string>
    <string name="load_all_books">load all books</string>
    <string name="clear_all_books">clear all books</string>
    <string name="diescription">Diescription:</string>
    <string name="year_text">Year:</string>
    <string name="autor_text">Autor:</string>
    <string name="name_text">Name:</string>
</resources>